Fixed perf regression by removing tree traversal for text sibling.

Changed contents of HeapHashMap on Document to store a new struct
StyleRecalcData containing both the original ComputedStyle and
the next Text sibling.

Deleted Node::nextTextSibling method that traverses the tree to find
the next text sibling, replaced usage of this method with access to
the Text node from the StyleRecalcData.

Patch yields a 79.21% performance improvement to
blink_perf.dom:select-single-remove benchmark on mac-10-10 bot:
http://storage.googleapis.com/chromium-telemetry/html-results/results-2016-11-06_17-33-01

BUG=659647

Review-Url: https://codereview.chromium.org/2476163002
Cr-Commit-Position: refs/heads/master@{#432324}

Former-commit-id: d1fc66d0e6f64e38bcff450b54f908b354eff2aa